# me3_galactic

./: Cargo.toml  README.md
.github/chglog/: release.yml
.github/workflows/: ci.yml  deploy.yml
src/: client.rs  html.rs  lib.rs  main.rs  percent.rs
src/client/: mission.rs  mod.rs
src/cmd/: automatic.rs  mod.rs  refresh.rs
src/data/: fmt.rs  mod.rs
src/html/: data.rs  mod.rs  script.rs
tests/: full_response.html  no_missions.json  response.html  script.html  script.json
