[package]
name = "galactic"
version = "0.6.1"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json", "cookies"] }
structopt = "0.3.17"
serde = "1.0.115"
anyhow = "1.0.32"
scraper = "0.12.0"
serde_json = "1.0.57"
chrono = { version = "0.4.15", features = ["serde"] }
indicatif = "0.15.0"
env_logger = "0.7.1"
log = "0.4.11"
