[package]
name = "galactic"
version = "0.7.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
structopt = "0.3.17"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
reqwest = { version = "0.10", features = ["blocking", "json", "cookies"] }
scraper = "0.12.0"
chrono = "0.4.15"
indicatif = "0.15.0"
